# ambihue

./: .trivyignore  CHANGELOG.md  DOCS.md  Dockerfile  ICON_CONVERSION.md  README.md  ambihue.py  config.yaml  pyproject.toml  repository.yaml  requirements.txt  run.sh  userconfig.example.yaml
.github/: requirements_dev.txt
.github/linters/: .flake8  .isort.cfg  .jscpd.json  .markdown-lint.yml  .markdownlint.yml  .python-lint
.github/workflows/: docker_build.yml  superlinter.yml
src/: ambilight_tv.py  color_mixer.py  colors.py  config_loader.py  hue_entertainment.py  main.py  tv_discovery.py
